--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Pojok Film - Kumpulan Link Nonton Streaming Film Movie Indonesia Thailand India Jepang TV Series Season Barat Drama Korea Drakor Cdrama China Sub Indo Gratis Bioskop Keren Terbaru Terlengkap Online CGV Cinema XXI LK 21 Situs Indoxxi Pengganti Indoxx1 Box Office Rebahin Pusat Juragan Serial Layar Kaca Lebar" />
 <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+	<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/MSI0072/One-Page-Web/main/Untitled-1.png/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
